--- a/public/style.css
+++ b/public/style.css
@@ -110,6 +110,11 @@ ul>.chatbox-header {
 
 ul>li {
 	margin-left: -18px;
+	cursor: pointer;
+}
+
+ul>li:hover {
+	text-shadow: 2px 2px 0px rgba(18, 170, 115, 1);
 }
 
 span {
